--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "livewire/livewire": "^2.5",
         "plank/laravel-metable": "^5.1",
         "predis/predis": "^1.1",
+        "spatie/laravel-activitylog": "^4.3",
         "spatie/laravel-permission": "^5.4"
     },
     "require-dev": {
